--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -44,6 +44,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}   # e.g. us-east-1
         run: |
+          rm -f docs/assets/tts/*.mp3 || true
           node scripts/build_tts_polly.cjs --db=docs/index.html --out=./docs/assets --rate=1000 --voice=Matthew
 
       # Commit only if something actually changed
