--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -24,7 +24,14 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Ensure folders
+   # aws   - name: Ensure folders 
+
+  # ⬇️ NEW: Install node-fetch for API calls and new TTS script ELEVEN LABS
+        name: Install TTS dependencies (node-fetch)
+        run: npm install node-fetch
+        name: Ensure assets folders
+   
+      
         run: |
           mkdir -p docs/assets/images docs/assets/tts
 
@@ -33,18 +40,21 @@ jobs:
         run: |
           node scripts/build_images_from_wikimedia.mjs --db=docs/index.html --out=./docs/assets
 
-      # ⬇️ NEW: install AWS Polly SDK so the runner can call Polly
-      - name: Install deps for TTS
-        run: npm i @aws-sdk/client-polly
+      # ⬇️ NEW: install AWS Polly SDK so the runner can call Polly    AWS
+      # - name: Install deps for TTS   AWS
+      #  run: npm i @aws-sdk/client-polly  AWS
 
-      # ⬇️ NEW: build only the missing TTS files with AWS Polly
-      - name: Build TTS (diff-only, AWS Polly)
+      # ⬇️ NEW: build only the missing TTS files with AWS Polly OR ELEVEN LABS
+      - name: Build TTS (diff-only, AWS Polly )
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}   # e.g. us-east-1
+         # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         # AWS_REGION: ${{ secrets.AWS_REGION }}   # e.g. us-east-1
         run: |
-          node scripts/build_tts_polly.cjs --db=docs/index.html --out=./docs/assets --rate=1000 --voice=Joanna
+      # node scripts/build_tts_polly.cjs --db=docs/index.html --out=./docs/assets --rate=1000 --voice=Joanna  AWS
+
+          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
+        run: node scripts/build_tts_elevenlabs.cjs --db=docs/index.html --out=./docs/assets --rate=1000 --voice=Rachel
 
       # Commit only if something actually changed
       - name: Commit & push if changes
